first pass of making symbols more consistent
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@201 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -749,21 +749,21 @@
 
 @misc{ATLAS_PowhegPythiaMC15Test,
 	collaboration = {ATLAS},
-	title = {{Exotics MadGraph/Powheg MC15 test request}},
+	title = {{Exotics MadGraph/POWHEG MC15 test request}},
 	howpublished = "\url{https://its.cern.ch/jira/browse/ATLMCPROD-1293}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
 
 @misc{ForumSVN_DMA,
-	title = {{SVN repository for Powheg input card for model with s-channel exchange of axial vector mediator}},
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of axial vector mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMA/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
 
 @misc{ForumSVN_DMV,
-	title = {{SVN repository for Powheg input card for model with s-channel exchange of vector mediator}},
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of vector mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
@@ -777,7 +777,7 @@
 }
 
 @misc{ForumSVN_DMS,
-	title = {{SVN repository for Powheg input card for model with s-channel exchange of scalar mediator}},
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
@@ -791,14 +791,14 @@
 }
 
 @misc{ForumSVN_DMP,
-	title = {{SVN repository for Powheg input card for model with s-channel exchange of pseudo-scalar mediator}},
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
 
 @misc{ForumSVN_DMGG,
-	title = {{SVN repository for Powheg input card for model with s-channel exchange of pseudo-scalar mediator, production through top loop from gluon-gluon initial state}},
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator, production through top loop from gluon-gluon initial state}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
