--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -27,8 +27,8 @@ Section~\ref{subsec:MonojetLikeModels}.
     \fmf{fermion,tension=0}{v1,i1}
     \fmflabel{\Large ${\bar{q}}$}{i1}
     \fmflabel{\Large ${q}$}{i2}
-    \fmflabel{\Large ${\bar{\chi}}$}{o1}
-    \fmflabel{\Large ${\chi}$}{o2}
+    \fmflabel{\Large ${\bar{\chiDM}}$}{o1}
+    \fmflabel{\Large ${\chiDM}$}{o2}
     \fmf{photon,tension=0}{visr,isr}
     \fmf{phantom,tension=0}{pvisr,pisr}
     \fmflabel{\Large ${V}$}{isr}
@@ -42,8 +42,8 @@ Section~\ref{subsec:MonojetLikeModels}.
     \fmf{fermion}{o2,v2,o1}
     \fmflabel{\Large ${\bar{q}}$}{i1}
     \fmflabel{\Large ${q}$}{i2}
-    \fmflabel{\Large ${\bar{\chi}}$}{o1}
-    \fmflabel{\Large ${\chi}$}{o2}
+    \fmflabel{\Large ${\bar{\chiDM}}$}{o1}
+    \fmflabel{\Large ${\chiDM}$}{o2}
     \fmf{photon}{o3,v2}
     \fmflabel{\Large ${V}$}{o3}
   \end{feynmandiagram}
