--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -5,20 +5,20 @@
 As pointed out in Ref.~\cite{Bell:2015sza}, the mono-$W$ signature can probe the iso-spin violating interactions of dark matter with quarks. The relevant operators after the electroweak symmetry breaking is 
 %
 \begin{equation}
-\frac{1}{\Lambda^2}\overline{\chi} \gamma_\mu \chi \left( \overline{u}_L \gamma^\mu u_L + \xi \bar{d}_L \gamma^\mu d_L \right) \,.
+\frac{1}{\Lambda^2}\overline{\chiDM} \gamma_\mu \chiDM \left( \overline{u}_L \gamma^\mu u_L + \xi \bar{d}_L \gamma^\mu d_L \right) \,.
 \end{equation}
 %
 Here, we only keep the left-handed quarks because the right-handed quarks do not radiate a $W$-gauge boson from the weak interaction. As the LHC constraints the cutoff to higher values, it is also important to know the corresponding operators before the electroweak symmetry. At the dimension-six level, the following operator
 %
 \begin{equation}
-\frac{c_6}{\Lambda^2}\overline{\chi} \gamma_\mu \chi \,\overline{Q}_L \gamma^\mu Q_L 
+\frac{c_6}{\Lambda^2}\overline{\chiDM} \gamma_\mu \chiDM \,\overline{Q}_L \gamma^\mu Q_L 
 \end{equation}
 %
 conserves iso-spin and provides us $\xi=1$~\cite{Bell:2015sza}. At the dimension-eight level, new operators appear to induce iso-spin violation and can be
 %
 \begin{equation}
-\frac{c^d_8}{\Lambda^4}\overline{\chi} \gamma_\mu \chi \,(H\overline{Q}_L) \gamma^\mu (Q_L H^\dagger) 
-+ \frac{c^u_8}{\Lambda^4}\overline{\chi} \gamma_\mu \chi \,(\tilde{H}\overline{Q}_L) \gamma^\mu (Q_L \tilde{H}^\dagger)  \,.
+\frac{c^d_8}{\Lambda^4}\overline{\chiDM} \gamma_\mu \chiDM \,(H\overline{Q}_L) \gamma^\mu (Q_L H^\dagger) 
++ \frac{c^u_8}{\Lambda^4}\overline{\chiDM} \gamma_\mu \chiDM \,(\tilde{H}\overline{Q}_L) \gamma^\mu (Q_L \tilde{H}^\dagger)  \,.
 \end{equation}
 % 
 After inputting the vacuum expectation value of the Higgs field, we have 
@@ -28,7 +28,7 @@ After inputting the vacuum expectation value of the Higgs field, we have
 % 
 For a nonzero $c_6$ and $v_{\rm EW} \ll \Lambda$, the iso-spin violation effects are suppressed. On the other hand, the values of $c_6$, $c^d_8$ and $c^u_8$ depend on the UV-models. 
 
-There is one possible UV-model to obtain a zero value for $c_6$ and non-zero values for $c^d_8$ and $c^u_8$. One can have the dark matter and the SM Higgs field charged under a new $U(1)^\prime$. There is a small mass mixing between SM $Z$-boson and the new $Z^\prime$ with a mixing angle of ${\cal O}(v_{\rm EW}^2/M^2_{Z^\prime})$. After integrating out $Z^\prime$, one has different effective dark matter couplings to $u_L$ and $d_L$ fields, which are proportional to their couplings to the $Z$ boson. For this model, we have $c_6=0$ and 
+There is one possible UV-model to obtain a zero value for $c_6$ and non-zero values for $c^d_8$ and $c^u_8$. One can have the dark matter and the SM Higgs field charged under a new $U(1)^\prime$. There is a small mass mixing between SM $Z$-boson and the new \Zprime with a mixing angle of ${\cal O}(v_{\rm EW}^2/M^2_{\Zprime})$. After integrating out \Zprime, one has different effective dark matter couplings to $u_L$ and $d_L$ fields, which are proportional to their couplings to the $Z$ boson. For this model, we have $c_6=0$ and 
  %
 \begin{equation}
 \xi = \frac{-\frac{1}{2} + \frac{1}{3} \sin^2{\theta_W} }{ \frac{1}{2} - \frac{2}{3} \sin^2{\theta_W}} \approx  -2.7 
@@ -50,10 +50,10 @@ couplings of Dark Matter to pairs of gauge-bosons.  Scalar fields may couple dir
 but must carry part of the electroweak vev.  One may thus consider a simple model where Dark Matter couples to a a scalar 
 singlet mediator, which mixes with the fields in the Higgs sector.
 \begin{equation}
-L\subset m_s S^2 + \lambda S^2H^2 +\lambda^{'} S H^2 + y S \chi \overline{\chi}
+L\subset m_s S^2 + \lambda S^2H^2 +\lambda^{'} S H^2 + y S \chiDM \overline{\chiDM}
 \end{equation}
 Where H is a field in the Higgs sector that contains part of the electroweak vev, 
-S is a heavy scalar singlet and $\chi$ is a Dark Matter field. 
+S is a heavy scalar singlet and $\chiDM$ is a Dark Matter field. 
 There is then an S channel diagram where DM pairs couple to the singlet field S, 
 which then mixes with a Higgs-sector field, and couples to W and Z bosons. 
 This diagram contains 2 insertions of EW symmetry breaking fields, 
@@ -61,7 +61,7 @@ corresponding in form to the effective dimension-5 operator in the previous sect
 
 \section{Tabulated cross-sections}
 
-\subsection{photon+MET signal, s-channel vector mediator model}
+\subsection{photon+MET signal, \schannel vector mediator model}
 
 \subsection{Higgs+MET signal, vector mediator model}
 
@@ -71,7 +71,7 @@ vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:zprimeXS}
 \begin{figure}[hbpt!]
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/EW/monoH/zprime_cross_section_new}
-		\caption{ Cross section of the $pp \rightarrow H\chi\bar{\chi}$ process 
+		\caption{ Cross section of the $pp \rightarrow H\chiDM\bar{\chiDM}$ process 
 			in units of pico-barn for the vector mediator model. 
 			\label{fig:zprimeXS}}
 	\end{center}
@@ -81,7 +81,7 @@ vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:zprimeXS}
 \begin{table}
 	\centering
 	\begin{tabular}{ccc}
-		$m_{DM}$ [GeV] & $m_{med}$ [GeV] & $\sigma_{pp\rightarrow h\chi\bar{\chi}}$ [pb] \\ \hline
+		$m_{DM}$ [GeV] & $m_{med}$ [GeV] & $\sigma_{pp\rightarrow h\chiDM\bar{\chiDM}}$ [pb] \\ \hline
 		1 & 10 & 0.0003835 \\
 		1 & 20 & 0.0003177 \\
 		1 & 50 & 0.0001467 \\
@@ -117,27 +117,27 @@ vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:zprimeXS}
 		1000 & 1995 & 8.316e-12 \\
 		1000 & 5000 & 2.112e-11 \\ \hline
 	\end{tabular}
-	\caption{ Cross section of the $pp \rightarrow h\chi\bar{\chi}$ process 
+	\caption{ Cross section of the $pp \rightarrow h\chiDM\bar{\chiDM}$ process 
 		in units of pico-barn for the vector mediator model. 
 		\label{tab:zprimeXS}}
 \end{table}
 
 \subsection{Higgs+MET signal, scalar mediator model}
 
-Figure~\ref{fig:scalarXS} shows the cross sections of the $pp \rightarrow H\chi\bar{\chi}$ process 
+Figure~\ref{fig:scalarXS} shows the cross sections of the $pp \rightarrow H\chiDM\bar{\chiDM}$ process 
 in this vector mediator model in the $m_{med}$ 
 vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:scalarXS}
 
 \begin{figure}[hbpt!]
 	\includegraphics[width=0.8\linewidth]{figures/EW/monoH/scalar_cross_section_new}
-	\caption{ \label{fig:scalarXS} Cross section of the $pp \rightarrow H\chi\bar{\chi}$ process 
+	\caption{ \label{fig:scalarXS} Cross section of the $pp \rightarrow H\chiDM\bar{\chiDM}$ process 
 		in units of pico-barn for the scalar mediator model.}
 \end{figure}
 
 \begin{table}
 	\centering
 	\begin{tabular}{ccc}
-		$m_{DM}$ [GeV] & $m_{med}$ [GeV] & $\sigma_{pp\rightarrow h\chi\bar{\chi}}$ [pb] \\ \hline
+		$m_{DM}$ [GeV] & $m_{med}$ [GeV] & $\sigma_{pp\rightarrow h\chiDM\bar{\chiDM}}$ [pb] \\ \hline
 		1 & 10 & 2.389 \\
 		1 & 20 & 2.483 \\
 		1 & 50 & 2.98 \\
@@ -174,12 +174,12 @@ vs $m_{DM}$ plane. The tabulated values can be found in Table~\ref{tab:scalarXS}
 		1000 & 1995 & 0.0004346 \\
 		1000 & 5000 & 1.245e-05 \\ \hline
 	\end{tabular}
-	\caption{ \label{tab:scalarXS} Cross section of the $pp \rightarrow h\chi\bar{\chi}$ process 
+	\caption{ \label{tab:scalarXS} Cross section of the $pp \rightarrow h\chiDM\bar{\chiDM}$ process 
 		in units of pico-barn for the scalar mediator.}
 \end{table}
 
 
-\subsection{Higgs+MET signal from 2HDM model with a $Z^\prime$ and a new pseudoscalar}
+\subsection{Higgs+MET signal from 2HDM model with a \Zprime and a new pseudoscalar}
 \label{subsec:Simulation}
 
 The leading order cross-sections from the Madgraph generator for the signal samples are listed in Tables~\ref{tab:SigSamplesZpA0}, ~ \ref{tab:SigSamplesZpDM}, ~ \ref{tab:SigSamplesZpZh}, for the various scan points recommended.  
@@ -189,7 +189,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 	\small
 	\begin{tabular}{|c|c|c|}
 		\hline
-		$M_{Z^\prime}$ (GeV) & $M_{A^0}(GeV)$ & $\sigma$ [pb] \\ \hline \hline
+		$M_{\Zprime}$ (GeV) & $M_{A^0}(GeV)$ & $\sigma$ [pb] \\ \hline \hline
 		600 & 300 & 1.55E-01  \\
 		600 & 400 & 2.18E-02  \\
 		800 & 300 & 8.30E-02  \\
@@ -217,8 +217,8 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 		\hline
 		\hline
 	\end{tabular}
-	\caption{LO cross-sections for $Z^\prime \to A^0h$ samples, varying $M_{Z^\prime}$ and $M_{A^0}$, keeping the DM mass fixed to 100 GeV. 
-    The columns from left to right describe $M_{Z^\prime}$, $M_{A^0}$ and the sample cross section in pb.}
+	\caption{LO cross-sections for $\Zprime \to A^0h$ samples, varying $M_{\Zprime}$ and $M_{A^0}$, keeping the DM mass fixed to 100 GeV. 
+    The columns from left to right describe $M_{\Zprime}$, $M_{A^0}$ and the sample cross section in pb.}
    \label{tab:SigSamplesZpA0}
 \end{table}
 
@@ -227,7 +227,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 	\small
 	\begin{tabular}{|c|c|c|c|}
 		\hline
-		$M_{Z^\prime}$ (GeV) & $M_{A^0}(GeV)$ & $M_{DM} (GeV)$ & $\sigma$ [pb] \\ \hline \hline
+		$M_{\Zprime}$ (GeV) & $M_{A^0}(GeV)$ & $M_{DM} (GeV)$ & $\sigma$ [pb] \\ \hline \hline
 		1000 & 300 & 10 & 3.76E-02  \\
 		1000 & 300 & 50 & 3.75E-02  \\
 		1200 & 600 & 10 & 3.64E-03  \\
@@ -235,7 +235,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 		\hline
 		\hline
 	\end{tabular}
-	\caption{LO cross-sections for $Z^\prime \to A^0h$ samples, when varying $M_{DM}$. The columns from left to right describe $M_{Z^\prime}$, $M_{A^0}$, $M_{DM}$, and the sample cross section in pb.}
+	\caption{LO cross-sections for $\Zprime \to A^0h$ samples, when varying $M_{DM}$. The columns from left to right describe $M_{\Zprime}$, $M_{A^0}$, $M_{DM}$, and the sample cross section in pb.}
 	\label{tab:SigSamplesZpDM}
 \end{table}
 
@@ -244,7 +244,7 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 	\small
 	\begin{tabular}{|c|c|}
 		\hline
-		$M_{Z^\prime}$ (GeV) & $\sigma$ [pb] \\ \hline \hline
+		$M_{\Zprime}$ (GeV) & $\sigma$ [pb] \\ \hline \hline
 		600 & 1.15E-01  \\
 		800 & 3.21E-02  \\
 		1000 & 1.13E-02  \\
@@ -253,6 +253,6 @@ The leading order cross-sections from the Madgraph generator for the signal samp
 		\hline
 		\hline
 	\end{tabular}
-	\caption{LO cross-sections for $Z^\prime \to Zh$ exclusive samples, varying $M_{Z^\prime}$. The columns from left to right describe $M_{Z^\prime}$ and the sample cross section in pb.}
+	\caption{LO cross-sections for $\Zprime \to Zh$ exclusive samples, varying $M_{\Zprime}$. The columns from left to right describe $M_{\Zprime}$ and the sample cross section in pb.}
 	\label{tab:SigSamplesZpZh}
 \end{table}
