--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -18,20 +18,20 @@ However, the presence of photons,
 leptons from W and Z decays,
 and W or Z bosons decaying hadronically
 allow backgrounds to be rejected more effectively,
-making Z/gamma/W+MET searches
-still worth comparing with searches in the jet+MET final state.
+making Z/gamma/W+\MET searches
+still worth comparing with searches in the jet+\MET final state.
 \Todo{Additional motivations exist for this final state from SUSY searches.}
 %TODO: Linda is writing sentence to make this stronger. 
 
 % The three commonly chosen EFT benchmarks for Dirac dark matter that are
 % kinematically distinct for what concerns the observables used in
-% MET+X searches~\footnote{[CD: we would need a plot here, or a reference to
-% monojet section where this is shown]} and span a wide range of MET spectrum in
-% the boson+MET searches are, in the notation of ~\cite{Goodman:2010ku},
+% \MET+X searches~\footnote{[CD: we would need a plot here, or a reference to
+% monojet section where this is shown]} and span a wide range of \MET spectrum in
+% the boson+\MET searches are, in the notation of ~\cite{Goodman:2010ku},
 % the D1 (scalar SM/WIMP interaction), D5 (vector-vector interaction) and D9
 % (tensor interaction) operator.
 
-\subsection{Vector mediator exchanged in the s-channel}
+\subsection{Vector mediator exchanged in the \schannel}
 
 An example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
@@ -47,25 +47,25 @@ up and down quark couplings to the mediator, denoted as $\xi$:
 \end{itemize}
 The $\xi=-1$ case leads to a large increase in the cross-section of the process,
 and modifies the spectrum of missing transverse energy or
-transverse mass used for the searches. The sensitivity of the W+MET search for
-this benchmark in this case surpasses that of the jet+MET search.
+transverse mass used for the searches. The sensitivity of the W+\MET search for
+this benchmark in this case surpasses that of the jet+\MET search.
 However, as shown in Ref.~\cite{Bell:2015sza}, the cross-section increase is due
 to the production of longitudinally polarized W bosons,
 as a consequence of a violation of electroweak gauge symmetries. Unless further
 particles are introduced (in a fashion similar
 to the Higgs boson in the Standard Model), choosing a value of $\xi=-1$
 for this simplified model will lead to a manifest violation of unitarity at LHC energies.
-The simplified model with a vector mediator exchanged in the s-channel model
+The simplified model with a vector mediator exchanged in the \schannel model
 can still be considered as a benchmark for searches with a W boson if $\xi=1$.
 We leave the study of further models with cross-section enhancements due
 to different couplings to up and down quarks for studies beyond the early LHC searches
 covered in this document.
 An example of such model is the case of both DM and SM Higgs charged under a new $U(1)'$,
-with a a small mass mixing between SM Z-boson and the new $Z^\prime$. This leads
+with a a small mass mixing between SM Z-boson and the new \Zprime. This leads
 to different effective DM couplings to $u_L$ and $d_L$, proportional to
 their coupling to the Z boson, detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
-The scan in the parameters that characterize this simplified model for EW boson + MET
+The scan in the parameters that characterize this simplified model for EW boson + \MET
 searches follow what is
 already detailed in Section~\ref{subsec:MonojetLikeModels}.
 %FIXME: refer to appropriate subsection
@@ -81,12 +81,12 @@ already detailed in Section~\ref{subsec:MonojetLikeModels}.
 %  and between mediator and initial state quarks (vector-vector, axial-vector, axial-axial, vector-axial).
 % \end{itemize}
 
-As in the case of the jet+MET models, the width does not have a significant
+As in the case of the jet+\MET models, the width does not have a significant
 impact on the kinematic distributions relevant for those searches. An example
 of the particle-level analysis acceptance using the
 generator-level cuts from Ref.~\cite{Aad:2014tda}
-for the photon+MET analysis, but raising the photon $p_T$ cut
-to 150 GeV is shown in Figure~\ref{fig:DMV_EW_gamma_acceptance},
+for the photon+\MET analysis, but raising the photon $p_T$ cut
+to 150~\gev is shown in Figure~\ref{fig:DMV_EW_gamma_acceptance},
 comparing a width that is set to $\Gamma=M_{med}/3$ to the
 minimal width (the ratio between the two widths
 ranges from 1.05 to 1.5 with increasing mediator masses).
@@ -116,14 +116,14 @@ $\Gamma=\mMed/3$} \\ \hline
 3000 & 1.02   & 1.03  &       & 1.01 \\
 \hline
 \end{tabular}
-    \caption{Analysis acceptance for the photon+MET analysis when varying the mediator width, in the
+    \caption{Analysis acceptance for the photon+\MET analysis when varying the mediator width, in the
     case of a vector mediator exchanged in the $s-$channel}%This plot will come from Marie-Helene
     \label{fig:DMV_EW_gamma_acceptance}
 \end{table}
 
 %% \begin{figure}
 %%     \includegraphics[width=0.7\textwidth]{figures/EW/acceptance_minwidth_vs_mo3_gamma}
-%%     \caption{Analysis acceptance for the photon+MET analysis when varying the mediator width, in the
+%%     \caption{Analysis acceptance for the photon+\MET analysis when varying the mediator width, in the
 %%     case of a vector mediator exchanged in the $s-$channel}%This plot will come from Marie-Helene
 %%     \label{fig:DMV_EW_gamma_acceptance}
 %% \end{figure}
@@ -135,22 +135,22 @@ benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 \begin{figure}[h!]
 \centering  
-\subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
-different mediator mass choices, for \mdm=10 GeV.\label{fig:DMV_EW_gamma_MET_SVMed}]{%
+\subfloat[Missing transverse momentum distribution for the photon+\MET final state, for 
+different mediator mass choices, for \mdm=10~\gev.\label{fig:DMV_EW_gamma_MET_SVMed}]{%
 \includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
-}%TODO: add this + equivalent plot of MET to appendix
+}%TODO: add this + equivalent plot of \MET to appendix
 \hfill
-\subfloat[Leading photon transverse momentum distribution for the photon+MET final state, 
-for different DM mass choices, with \mMed=1 TeV.\label{fig:DMV_EW_gamma_pT_SVMed}]{%
+\subfloat[Leading photon transverse momentum distribution for the photon+\MET final state, 
+for different DM mass choices, with \mMed=1~\tev.\label{fig:DMV_EW_gamma_pT_SVMed}]{%
 		\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_mV1000GeV}
-}%TODO: add equivalent plot of MET to appendix
+}%TODO: add equivalent plot of \MET to appendix
 \hfill
-\subfloat[Missing transverse momentum distribution for the leptonic Z+MET final state, 
-for different mediator mass choices, for \mdm=15 GeV\label{fig:DMV_EW_Z_MET_SVMed}]{%
+\subfloat[Missing transverse momentum distribution for the leptonic Z+\MET final state, 
+for different mediator mass choices, for \mdm=15~\gev\label{fig:DMV_EW_Z_MET_SVMed}]{%
 \includegraphics[width=0.45\textwidth]{figures/EW/pt_vv_Mx15}
 }    
 \hfill
-\subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET_SVMed}]{%
+\subfloat[Missing transverse momentum distribution for the hadronic W+\MET final state.\label{fig:DMV_EW_Whad_MET_SVMed}]{%
 	\includegraphics[width=0.5\textwidth]{figures/EW/monoWhad_Destructive/metPt}
 }    
 \caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
@@ -159,7 +159,7 @@ for the simplified model
 \label{fig:DMV_EW_kinematics_SVMed}
 \end{figure}
 
-\subsection{Scalar mediator exchanged in the s-channel}
+\subsection{Scalar mediator exchanged in the \schannel}
 \label{sub:EW_Scalar}
 
 \Todo{Feynman diagram?}
@@ -172,7 +172,7 @@ The scan in \mdm and \mMed should follow the one in Table~\ref{fig:DMV_EW_gamma_
 although individual analyses may choose to reduce the granularity of the scan
 according to their expected sensitivity. 
 
-\subsection{Colored scalar mediator exchanged in the t-channel}
+\subsection{Colored scalar mediator exchanged in the \tchannel}
 
 The model parameters with emission of an EW boson 
 generally follow those in Section~\ref{subsec:MonojetLikeModels},
@@ -180,18 +180,18 @@ even though fewer diagrams are involved.
 A representative Feynman diagram can be
 constructed by replacing a gluon in Fig.~\ref{fig:tchannelMonojet}
 with a $\gamma,W,Z$ boson. See Ref.~\cite{Bell:2012rg} for a theoretical overview
-of this model with specific examples for the Z+MET final state. 
+of this model with specific examples for the Z+\MET final state. 
 
-Figure~\ref{fig:TChan_EW_Zhad_MET} shows the MET distribution for the hadronic Z+MET final state, 
+Figure~\ref{fig:TChan_EW_Zhad_MET} shows the \MET distribution for the hadronic Z+\MET final state, 
 with varying dark matter and mediator mass, before any selection. 
 The acceptance for a series of simplified analysis cuts 
-(MET$>$350 GeV, leading jet $p_T >$ 40 GeV, minimum azimuthal angle between jet and MET > 0.4) 
+(\MET$>$350~\gev, leading jet $p_T >$ 40~\gev, minimum azimuthal angle between jet and \MET > 0.4) 
 applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}. 
 
 \begin{figure}[h!]
 \centering  
 \includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/metPt}
-\caption{Missing transverse momentum distribution for the hadronic Z+MET final state,
+\caption{Missing transverse momentum distribution for the hadronic Z+\MET final state,
 for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
 \label{fig:TChan_EW_Zhad_MET}
 \end{figure}
@@ -199,7 +199,7 @@ for the simplified model with a colored scalar mediator exchanged in the $t-$cha
 \begin{figure}[h!]
 \centering  
 \includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/acc}
-\caption{Acceptance table for the hadronic Z+MET final state,
+\caption{Acceptance table for the hadronic Z+\MET final state,
 for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
 \label{fig:TChan_EW_Zhad_acc}
 \end{figure}
