--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -104,7 +104,7 @@ structure as the Standard Model. This choice is both natural, as there
 is no required additional theory of flavor beyond what is already
 present in the SM, and and it provides a mechanism to ensure that the
 models do not violate flavor constraints.  As a consequence, spin-0
-resonances exchanged in the s-channel must have Yukawa couplings to SM
+resonances exchanged in the \schannel must have Yukawa couplings to SM
 fermions. Flavor-safe models can still be constructed beyond the MFV
 assumption~\cite{Agrawal:2014aoa}, but their phenomenology is left for
 future studies.
