--- a/doc/tex/ScalarModels.tex
+++ b/doc/tex/ScalarModels.tex
@@ -6,12 +6,12 @@ In our benchmark models, we will consider two possibilities for the CP assignmen
 
 \subsection{Fermionic Dark Matter}
 
-Assuming dark matter is a fermion $\chi$ who's interactions with the Standard Model proceed only through a scalar $\phi$ or pseudoscalar $a$, the most general Lagrangian at tree-level are
+Assuming dark matter is a fermion $\chiDM$ who's interactions with the Standard Model proceed only through a scalar $\phi$ or pseudoscalar $a$, the most general Lagrangian at tree-level are
 \begin{eqnarray}
-{\cal L}_{{\rm fermion},\phi} & = & {\cal L}_{\rm SM}+i\bar{\chi} \slashed{\partial} \chi + m_\chi \bar{\chi}\chi + \left| \partial_\mu \phi \right|^2+\frac{1}{2}m_\phi^2 \phi^2 + g_\chi \phi \bar{\chi}\chi+ \sum_f \frac{g_v y_f}{\sqrt{2}} \phi \bar{f} f, \label{eq:scalarlag} \\
-{\cal L}_{{\rm fermion},a} & = & {\cal L}_{\rm SM}+i\bar{\chi} \slashed{\partial} \chi + m_\chi \bar{\chi}\chi + \left| \partial_\mu a \right|^2+\frac{1}{2}m_a^2 a^2 + i g_\chi a \bar{\chi}\gamma^5 \chi+ \sum_f i \frac{g_v y_f}{\sqrt{2}} a \bar{f}\gamma^5 f. \label{eq:pseudoscalarlag}
+{\cal L}_{{\rm fermion},\phi} & = & {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu \phi \right|^2+\frac{1}{2}m_\phi^2 \phi^2 + g_\chiDM \phi \bar{\chiDM}\chiDM+ \sum_f \frac{g_v y_f}{\sqrt{2}} \phi \bar{f} f, \label{eq:scalarlag} \\
+{\cal L}_{{\rm fermion},a} & = & {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu a \right|^2+\frac{1}{2}m_a^2 a^2 + i g_\chiDM a \bar{\chiDM}\gamma^5 \chiDM+ \sum_f i \frac{g_v y_f}{\sqrt{2}} a \bar{f}\gamma^5 f. \label{eq:pseudoscalarlag}
 \end{eqnarray}
-Here, we have made several simplifying assumptions. First, we assume that the coupling to visible-sector fermions is MFV, and proportional to a single universal coupling $g_v$. Thus, the coupling of $\phi$ or $a$ to any flavor of fermion $f$ is set by $g_v \times y_f$, where $y_f$ is the Standard Model yukawa $y_f = \sqrt{2}m_f/v$.\footnote{This normalization for the yukawas assumes $v = 246$~GeV and $y_t \sim 1$.} It is not hard to imagine scenarios that still possess the positive qualities of the MFV assumption but have non-universal $g_v$; for example, couplings only to up-type quarks, or only to leptons. We do not single out any of these options here in our benchmark models, but remind the reader that it is desirable to have experimental constraints sensitive to couplings to different flavors of fermions. Similarly, since there is no ``MFV'' motivation for the structure of dark matter-mediator couplings in the dark sector, and it is of course not known whether the dark matter mass $m_\chi$ is set by only by the Higgs vev $v$ (indeed this would seem to be somewhat unlikely, given the direct detection constraints on dark matter as containing a pure $SU(2)_L$ doublet) we parametrize the dark matter-mediator coupling by $g_\chi$, rather than by some number times a yukawa coupling proportional to $m_\chi$. 
+Here, we have made several simplifying assumptions. First, we assume that the coupling to visible-sector fermions is MFV, and proportional to a single universal coupling $g_v$. Thus, the coupling of $\phi$ or $a$ to any flavor of fermion $f$ is set by $g_v \times y_f$, where $y_f$ is the Standard Model yukawa $y_f = \sqrt{2}m_f/v$.\footnote{This normalization for the yukawas assumes $v = 246$~GeV and $y_t \sim 1$.} It is not hard to imagine scenarios that still possess the positive qualities of the MFV assumption but have non-universal $g_v$; for example, couplings only to up-type quarks, or only to leptons. We do not single out any of these options here in our benchmark models, but remind the reader that it is desirable to have experimental constraints sensitive to couplings to different flavors of fermions. Similarly, since there is no ``MFV'' motivation for the structure of dark matter-mediator couplings in the dark sector, and it is of course not known whether the dark matter mass $\mDM$ is set by only by the Higgs vev $v$ (indeed this would seem to be somewhat unlikely, given the direct detection constraints on dark matter as containing a pure $SU(2)_L$ doublet) we parametrize the dark matter-mediator coupling by $g_\chiDM$, rather than by some number times a yukawa coupling proportional to $\mDM$. 
 
 Finally, the most general Lagrangians including new scalars or pseudoscalars should have a potential $V$ containing possible interactions with the Higgs $h$. As stated in the introduction, we choose to take a more minimal set of possible interactions, and leave discussions of the Higgs interactions to the sections on the Higgs Portal.
 
@@ -28,22 +28,22 @@ f_a(\tau) & = & \left\{\begin{array}{cc} \tau\left[\arcsin\tfrac{1}{\sqrt{\tau}}
 
 {\it It is important to remember the values of the loop-induced couplings shown here are correct only in the limit of on-shell external gauge bosons, and where the internal momenta in the loops are small compared to the top mass. They should not be used in Monte Carlo even-generation with gluon jets that have large $p_T$ when compared to $m_t$, or when the mediators themselves have high $p_T$.} The tree-level couplings of scalar and pseudoscalar mediators to quarks can be used in event-generation through programs like {\tt MadGraph5} as with any other new physics model, and model files are available for these purposes. Correct event generation of scalars/pseudoscalar mediators being produced primarily through the gluon couplings must use more specialized event generation routines, capable of resolving the loop. Such codes include {\tt MCFM} and {\tt Sherpa}, but are not as yet ready for out-of-the-box use in the same manner as {\tt MadGraph}.
 
-These Simplified Models have four free parameters: the universal coupling $g_v$, the dark coupling $g_\chi$, the dark matter mass $m_\chi$, and the mediator mass $m_{\phi}$ or $m_a$. From this, all phenomenology can be calculated. However, one of the critical derived quantities, the mediator width, deserves special discussion. Under the minimal model, the widths for the mediators are given by:
+These Simplified Models have four free parameters: the universal coupling $g_v$, the dark coupling $g_\chiDM$, the dark matter mass $\mDM$, and the mediator mass $m_{\phi}$ or $m_a$. From this, all phenomenology can be calculated. However, one of the critical derived quantities, the mediator width, deserves special discussion. Under the minimal model, the widths for the mediators are given by:
 \begin{eqnarray}
-\Gamma_\phi & = & \sum_f N_C \frac{y_f^2 g_v^2 m_\phi}{16 \pi} \left(1-\frac{4 m_f^2}{m_\phi^2}\right)^{3/2} + \frac{g_\chi^2 m_\phi}{8 \pi} \left(1-\frac{4 m_\chi^2}{m_\phi^2}\right)^{3/2}  \label{eq:scalarwidth} \\
+\Gamma_\phi & = & \sum_f N_C \frac{y_f^2 g_v^2 m_\phi}{16 \pi} \left(1-\frac{4 m_f^2}{m_\phi^2}\right)^{3/2} + \frac{g_\chiDM^2 m_\phi}{8 \pi} \left(1-\frac{4 \mDM^2}{m_\phi^2}\right)^{3/2}  \label{eq:scalarwidth} \\
 & & \nonumber + \frac{\alpha_S^2 y_t^2 g_v^2 m_\phi^3}{32 \pi^3 v^2} \left| f_\phi\left(\tfrac{4m_t^2}{m_\phi^2} \right)\right|^2+ \frac{\alpha^2 y_t^2 g_v^2 m_\phi^3}{16\times 9 \pi^3 v^2} \left| f_\phi\left(\tfrac{4m_t^2}{m_\phi^2} \right)\right|^2 \label{eq:pseudoscalarwidth} \\
-\Gamma_a & = & \sum_f N_C \frac{y_f^2 g_v^2 m_a}{16 \pi} \left(1-\frac{4 m_f^2}{m_a^2}\right)^{1/2} + \frac{g_\chi^2 m_a}{8 \pi} \left(1-\frac{4 m_\chi^2}{m_a^2}\right)^{1/2}  \\
+\Gamma_a & = & \sum_f N_C \frac{y_f^2 g_v^2 m_a}{16 \pi} \left(1-\frac{4 m_f^2}{m_a^2}\right)^{1/2} + \frac{g_\chiDM^2 m_a}{8 \pi} \left(1-\frac{4 \mDM^2}{m_a^2}\right)^{1/2}  \\
 & & \nonumber + \frac{\alpha_S^2 y_t^2 g_v^2 m_a^3}{8 \pi^3 v^2} \left| f_a\left(\tfrac{4m_t^2}{m_\phi^2} \right)\right|^2+ \frac{\alpha^2 y_t^2 g_v^2 m_a^3}{4\times 9 \pi^3 v^2} \left| f_a\left(\tfrac{4m_t^2}{m_a^2} \right)\right|^2 
 \end{eqnarray}
 Here, the first term in each width corresponds to the decay into Standard Model fermions (the sum runs over all kinematically available fermions, $N_C = 3$ for quarks and $N_C = 1$ for leptons). The second term is the decay into dark matter (assuming that this decay is kinematically allowed), and the last two terms correspond to decay into gluons and photon pairs. The factor of 2 between the decay into Standard Model fermions and into dark matter is a result of our choice of normalization of the yukawa couplings.
 
-In colliders, if the mediator is produced on-shell, as is the primary mode of dark matter production when $m_\chi < m_{\phi/a} /2$ and $m_{\phi/a} \ll \sqrt{\hat{s}}$ (where $\sqrt{\hat{s}}$ is some characteristic c.o.m. at the collider in question), the cross section of dark matter production will be proportional to the branching ratio into dark matter. The total production of the mediator will go as $g_v^2$, and the decay into invisible dark matter will be $\propto g_\chi^2/\Gamma_{\phi/a}$, with the appropriate kinematic factors. This confounds the easy factorization of limits on the four-dimensional parameter space, since while the total cross section will have an overall dependence on the product $g_\chi^2 \times g_v^2$, it will also depend on $\Gamma_{\phi/a}$, which even in the minimal model depends on the sum of $g_\chi^2$ and $g_v^2$ (with kinematic factors inserted). 
+In colliders, if the mediator is produced on-shell, as is the primary mode of dark matter production when $\mDM < m_{\phi/a} /2$ and $m_{\phi/a} \ll \sqrt{\hat{s}}$ (where $\sqrt{\hat{s}}$ is some characteristic c.o.m. at the collider in question), the cross section of dark matter production will be proportional to the branching ratio into dark matter. The total production of the mediator will go as $g_v^2$, and the decay into invisible dark matter will be $\propto g_\chiDM^2/\Gamma_{\phi/a}$, with the appropriate kinematic factors. This confounds the easy factorization of limits on the four-dimensional parameter space, since while the total cross section will have an overall dependence on the product $g_\chiDM^2 \times g_v^2$, it will also depend on $\Gamma_{\phi/a}$, which even in the minimal model depends on the sum of $g_\chiDM^2$ and $g_v^2$ (with kinematic factors inserted). 
 
 In addition, as this is a Simplified Model, it is possible that the mediator can decay into additional states present in a full theory that we have neglected. For example, the mediator could decay into additional new charged particles which themselves eventually decay into dark matter, but with additional visible particles that would move the event out of the selection criteria of monojets or similar missing energy searches. Thus, the widths calculated in Eqs.~\eqref{eq:scalarwidth} and \eqref{eq:pseudoscalarwidth} are lower bounds on the total width. 
 
-As a result of these issues, the width of the mediator is often treated as an independent variable in Simplified Models with $s$-channel production of dark matter. Fortunately, for on-shell production, the effect of changing the width is only a rescaling of the total event rate assuming that $\Gamma_{\phi/a} < m_{\phi/a}$ \cite{Buckley:2014fba}, which is a necessary condition for a valid weakly coupled theory. As a result, changing the width just rescales the total event rate at colliders. In the case when the dark matter is produced through an off-shell mediator, the width is not relevant. We therefore recommend that experimental and theoretical bounds on $s$-channel models make the assumption that the width is minimal, set by Eqs.~\eqref{eq:scalarwidth} or \eqref{eq:pseudoscalarwidth}, and treat it as a dependent quantity, rather than an additional free parameter.
+As a result of these issues, the width of the mediator is often treated as an independent variable in Simplified Models with \schannel production of dark matter. Fortunately, for on-shell production, the effect of changing the width is only a rescaling of the total event rate assuming that $\Gamma_{\phi/a} < m_{\phi/a}$ \cite{Buckley:2014fba}, which is a necessary condition for a valid weakly coupled theory. As a result, changing the width just rescales the total event rate at colliders. In the case when the dark matter is produced through an off-shell mediator, the width is not relevant. We therefore recommend that experimental and theoretical bounds on \schannel models make the assumption that the width is minimal, set by Eqs.~\eqref{eq:scalarwidth} or \eqref{eq:pseudoscalarwidth}, and treat it as a dependent quantity, rather than an additional free parameter.
 
-Furthermore, as we are dealing with a 4D parameter space, it is necessary to consider how to reduce the parameter space to display results which can be compared between experiments and with theory. Clearly, the dependence of the constraints from experiments on the masses $m_\chi$ and $m_{\phi/a}$ cannot be suppressed, as the bounds will have non-trivial kinematic dependences on the masses. This leaves the couplings $g_\chi$ and $g_v$. The most straightforward assumption to make is to set $g_\chi = g_v$. This has the somewhat unfortunate result of making certain types of experimental results appear more effective than others. For example, with $g_\chi = g_v$, we expect the mediator branching ratio to dark matter to completely dominate over the visible channels, unless the top channel is kinematically allowed. This would make resonance searches in visible channels for the mediator appear to be uncompetitive. However, some choice must be made, and setting the two couplings equal to each other is perhaps the simplest.
+Furthermore, as we are dealing with a 4D parameter space, it is necessary to consider how to reduce the parameter space to display results which can be compared between experiments and with theory. Clearly, the dependence of the constraints from experiments on the masses $\mDM$ and $m_{\phi/a}$ cannot be suppressed, as the bounds will have non-trivial kinematic dependences on the masses. This leaves the couplings $g_\chiDM$ and $g_v$. The most straightforward assumption to make is to set $g_\chiDM = g_v$. This has the somewhat unfortunate result of making certain types of experimental results appear more effective than others. For example, with $g_\chiDM = g_v$, we expect the mediator branching ratio to dark matter to completely dominate over the visible channels, unless the top channel is kinematically allowed. This would make resonance searches in visible channels for the mediator appear to be uncompetitive. However, some choice must be made, and setting the two couplings equal to each other is perhaps the simplest.
 
 We now turn to the constraints on these models from non-collider experiments: thermal relic abundances, indirect detection, and direct detection. The first two results can be considered together, as they depend on the same set of annihilation cross sections.
 
@@ -51,8 +51,8 @@ We now turn to the constraints on these models from non-collider experiments: th
 % 
 % The thermally-average annihilation of dark matter through the spin-0 mediators can be calculated from the Simplified Model Eqs.~\eqref{eq:scalarlag} and \eqref{eq:pseudoscalarlag}. The resulting cross sections for annihilation into Standard Model fermions, as a function of the dark matter temperature $T$ are
 % \begin{eqnarray*}
-% \langle \sigma v \rangle(\chi\bar{\chi} \to \phi^* \to f\bar{f}) & = & N_c \frac{3 g_\chi^2 g_v^2 y_f^2 (m_\chi^2 - m_f^2)^{3/2}}{8\pi m_\chi^2\left[ (m_\phi^2 - 4m_\chi^2)^2 + m_\phi^2\Gamma^2_\phi \right]} T, \label{eq:scalarthermal} \\
-% \langle \sigma v \rangle(\chi\bar{\chi} \to a^* \to f\bar{f}) & = & N_c \frac{g_\chi^2 g_v^2 y_f^2 }{4\pi \left[ (m_a^2 - 4m_\chi^2)^2 + m_a^2\Gamma^2_a \right]} \left[ m_\chi^2 \sqrt{1-\frac{m_f^2}{m_\chi^2}} + \frac{3m_f^2}{4m_\chi \sqrt{1-\frac{m_f^2}{m_\chi^2}}} T \right].  \label{eq:pseudoscalarthermal} \\
+% \langle \sigma v \rangle(\chiDM\bar{\chiDM} \to \phi^* \to f\bar{f}) & = & N_c \frac{3 g_\chiDM^2 g_v^2 y_f^2 (\mDM^2 - m_f^2)^{3/2}}{8\pi \mDM^2\left[ (m_\phi^2 - 4\mDM^2)^2 + m_\phi^2\Gamma^2_\phi \right]} T, \label{eq:scalarthermal} \\
+% \langle \sigma v \rangle(\chiDM\bar{\chiDM} \to a^* \to f\bar{f}) & = & N_c \frac{g_\chiDM^2 g_v^2 y_f^2 }{4\pi \left[ (m_a^2 - 4\mDM^2)^2 + m_a^2\Gamma^2_a \right]} \left[ \mDM^2 \sqrt{1-\frac{m_f^2}{\mDM^2}} + \frac{3m_f^2}{4\mDM \sqrt{1-\frac{m_f^2}{\mDM^2}}} T \right].  \label{eq:pseudoscalarthermal} \\
 % \end{eqnarray*}
 % Notably, the scalar mediators do not have a temperature-independent contribution their annihilation cross section, while pseudoscalars do. As $T \propto v^2$, where $v$ is the dark matter velocity, there is no velocity-independent annihilation through scalars. As, in the Universe today, $v \lesssim 10^{-3}$, this means there are no non-trivial constraints on dark matter annihilation from indirect detection in the scalar mediator model. 
 % 
@@ -64,24 +64,24 @@ We now turn to the constraints on these models from non-collider experiments: th
 % \]
 % The thermal relic abundance of dark matter is then
 % \begin{equation}
-% \Omega_\chi h^2 = \frac{1.04\times 10^9~\mbox{GeV}}{m_{\rm Planck}}\frac{x_f}{\sqrt{g_\star}}\frac{1}{a+b m_\chi x_f^{-1}},
+% \Omega_\chiDM h^2 = \frac{1.04\times 10^9~\mbox{GeV}}{m_{\rm Planck}}\frac{x_f}{\sqrt{g_\star}}\frac{1}{a+b \mDM x_f^{-1}},
 % \end{equation}
-% where $x_f \sim 25$ is $m_\chi$ over the freeze-out temperature, and $g_{\rm star}$ is the number of degrees of freedom active at the time of freeze-out. For reasonable early Universe parameters, the correct relic abundance occurs when
+% where $x_f \sim 25$ is $\mDM$ over the freeze-out temperature, and $g_{\rm star}$ is the number of degrees of freedom active at the time of freeze-out. For reasonable early Universe parameters, the correct relic abundance occurs when
 % \begin{equation}
-% 3 \times 10^{-26}~\mbox{cm$^3$/s} = 2.57 \times 10^{-9}~\mbox{GeV}^{-2} = a + \frac{b m_\chi}{x_f}.
+% 3 \times 10^{-26}~\mbox{cm$^3$/s} = 2.57 \times 10^{-9}~\mbox{GeV}^{-2} = a + \frac{b \mDM}{x_f}.
 % \end{equation}
 % Keep in mind that these equations require some modification when the dark matter-mediator system is on resonance. Further, recall that we do not know dark matter is a thermal relic, or that the only annihilation process in play in the early Universe is through the mediator. Therefore, while it is appropriate to compare the sensitivity of experimental results to the thermal cross section, this is not the only range of parameters of theoretical interest.
 % 
 % \paragraph{Direct Detection}
 % 
-% As noted previously, the scalar mediator model has no indirect detection constraints, while the pseudoscalar does. The situation is reversed in direct detection: the pseudoscalar mediator has no velocity- or momentum-unsuppressed interactions with nucleons, while the scalar mediator induces a spin-independent scattering cross section. These constraints are very powerful compared to the present collider bounds, especially when $m_\chi > 10$~GeV. As with indirect detection, for weakly coupled theories, the direct detection bounds are relatively independent of the width. 
+% As noted previously, the scalar mediator model has no indirect detection constraints, while the pseudoscalar does. The situation is reversed in direct detection: the pseudoscalar mediator has no velocity- or momentum-unsuppressed interactions with nucleons, while the scalar mediator induces a spin-independent scattering cross section. These constraints are very powerful compared to the present collider bounds, especially when $\mDM > 10$~GeV. As with indirect detection, for weakly coupled theories, the direct detection bounds are relatively independent of the width. 
 % 
 % For the scalar mediator model, the interaction with direct detection nuclear targets is (to good approximation) isospin-conserving. Therefore, the bound on scattering with nucleons can be applied to either the dark matter-proton or dark matter-neutron cross section, given by
 % \begin{eqnarray}
-% \sigma_{\chi-p,n} & = & \frac{\mu^2}{\pi} f_{p,n}^2 \\
-% f_{p,n} & = & \sum_{q=u,d,s} f^{p,n}_q \frac{m_{p,n}}{m_q} \left(\frac{g_\chi g_v y_q}{\sqrt{2}m_\phi^2} \right) + \frac{2}{27} f_{\rm TG}^{p,n} \sum_{q=c,b,t} \frac{m_{p,n}}{m_q} \left(\frac{g_\chi g_v y_q}{\sqrt{2}m_\phi^2} \right),
+% \sigma_{\chiDM-p,n} & = & \frac{\mu^2}{\pi} f_{p,n}^2 \\
+% f_{p,n} & = & \sum_{q=u,d,s} f^{p,n}_q \frac{m_{p,n}}{m_q} \left(\frac{g_\chiDM g_v y_q}{\sqrt{2}m_\phi^2} \right) + \frac{2}{27} f_{\rm TG}^{p,n} \sum_{q=c,b,t} \frac{m_{p,n}}{m_q} \left(\frac{g_\chiDM g_v y_q}{\sqrt{2}m_\phi^2} \right),
 % \end{eqnarray}
-% where $\mu$ is the dark matter-nucleon reduced mass $\mu = (m_\chi m_{p,n})/(m_\chi + m_{p,n})$, and the nuclear matrix elements $f_{q}^{p,n}$ and $f_{\rm TG}^{p,n}$ must be extracted from lattice QCD. For our purposes, the neutron and proton matrix elements are essentially identical. Using the values from Ref.~\cite{Fitzpatrick:2010em} gives (for both protons and neutrons)
+% where $\mu$ is the dark matter-nucleon reduced mass $\mu = (\mDM m_{p,n})/(\mDM + m_{p,n})$, and the nuclear matrix elements $f_{q}^{p,n}$ and $f_{\rm TG}^{p,n}$ must be extracted from lattice QCD. For our purposes, the neutron and proton matrix elements are essentially identical. Using the values from Ref.~\cite{Fitzpatrick:2010em} gives (for both protons and neutrons)
 % \begin{eqnarray}
 % f_u & = & 0.02 \\
 % f_d & = & 0.026 \\
