--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -10,14 +10,14 @@ transverse momentum (monotop), some of them including dark matter candidates.
 A simplified model encompassing the processes leading to this phenomenology is described in Refs.~\cite{AndreaFuksMaltoni,Agram:2013wda,Boucheneb:2014wza},
 and is adopted as one of the benchmarks for Run 2 LHC searches. 
 
-A dark matter candidate \DMParticle{} and a new particle (vector or scalar) 
+A dark matter candidate \chiDM and a new particle (vector or scalar) 
 are added to the SM, in a theory that respects the $\SUtwoUone$ symmetry 
 and produces a single top quark in association with either the DM particle or a new particle
 decaying invisibly. 
 
 Within this model, two distinct processes can lead to monotop production:
 \begin{itemize}
-	\item resonant production, as shown in the diagram of Fig.~\ref{fig:feyn_prod} (a), where a color triplet scalar $\varphi$ or vector field are exchanged in the s-channel, and decay into a spin 1/2 invisible new fermion $\chi$ and a top quark;
+	\item resonant production, as shown in the diagram of Fig.~\ref{fig:feyn_prod} (a), where a color triplet scalar $\varphi$ or vector field are exchanged in the \schannel, and decay into a spin 1/2 invisible new fermion $\chiDM$ and a top quark;
 	\item non-resonant production, as shown in the diagrams of Fig.~~\ref{fig:feyn_prod} (b) and (c), where a flavor-changing interaction produces a top quark in association with a new colored scalar or vector $V$. The new particles decay invisibly, e.g. to a pair of DM particles. $V$ can also decay into a top quark and an up quark, leading to a same-sign top quark final state; a detailed study of the complementarity of this signature is beyond the scope of this Forum report.  
 \end{itemize}
 
@@ -37,7 +37,7 @@ Within this model, two distinct processes can lead to monotop production:
     \fmflabel{\Large ${\bar{s}}$}{i1}
     \fmflabel{\Large ${d}$}{i2}
     \fmflabel{\Large ${t}$}{o1}
-    \fmflabel{\Large ${\chi}$}{o2}
+    \fmflabel{\Large ${\chiDM}$}{o2}
   \end{feynmandiagram}
 }\\\vspace{\baselineskip}
 \subfloat[\label{subfig:S4s}]{
@@ -71,11 +71,11 @@ Within this model, two distinct processes can lead to monotop production:
 \caption
 {
 Feynman diagram of leading order processes leading to monotop events: production of
-a coloured scalar resonance $\varphi$ decaying into a top quark and a spin-$1/2$ fermion $\chi$ (a),
-$s-$ (b) and $t$-channel (c) non resonant production of a top quark in association with
+a coloured scalar resonance $\varphi$ decaying into a top quark and a spin-$1/2$ fermion $\chiDM$ (a),
+$s-$ (b) and \tchannel (c) non resonant production of a top quark in association with
 a spin-1 boson $V$.
 %Feynman diagram of leading order processes leading to monotop events: resonant production of
-%$t$ via resonant new particle $M$ decaying into a top quark and $\Xnew$, which is the dark matter fermion $\chi$ (left),
+%$t$ via resonant new particle $M$ decaying into a top quark and $\Xnew$, which is the dark matter fermion $\chiDM$ (left),
 %and $s$ and $t$ channel non-resonant production of a top quark in association with $\Xnew$, which is the new particle $M$ (middle and right).
 }
 \label{fig:feyn_prod}
@@ -89,7 +89,7 @@ for the resonant model; the other two cases with a more complicated phenomenolog
 \newthought{Resonant production}
 \label{sec:ResonantProd}
 
-In this case, a colored $2/3$-charged scalar ($\varphi$) is produced and decays into a top quark and a spin-$1/2$ invisible particle, $\chi$.  The dynamics of the new sector is described by the following Lagrangian:
+In this case, a colored $2/3$-charged scalar ($\varphi$) is produced and decays into a top quark and a spin-$1/2$ invisible particle, $\chiDM$.  The dynamics of the new sector is described by the following Lagrangian:
 
 \be\label{eq:lagrangianResonant}\bsp
 \lag &=
@@ -103,21 +103,21 @@ In this case, a colored $2/3$-charged scalar ($\varphi$) is produced and decays 
 %&+ 
 \varphi \bar d^c
 \Big[a^q_{SR} + b^q_{SR} \gamma_5 \Big] d +
-\varphi \bar u \Big[a^{1/2}_{SR} + b^{1/2}_{SR} \gamma_5 \Big] \chi
+\varphi \bar u \Big[a^{1/2}_{SR} + b^{1/2}_{SR} \gamma_5 \Big] \chiDM
 %
 %\\ &
 %+ X_\mu \bar d^c\gmu
 %\Big[a^q_{VR} + b^q_{VR} \gamma_5 \Big] d
 %%
 %+ X_\mu \bar u \gmu
-%\Big[a^{1/2}_{VR} + b^{1/2}_{VR} \gamma_5 \Big] \chi 
+%\Big[a^{1/2}_{VR} + b^{1/2}_{VR} \gamma_5 \Big] \chiDM 
 + 
 {\rm h.c.} \bigg] 
 \esp\ee
 
 %\begin{eqnarray}
 %\label{eq:lagrangianResonant}
-%\mathcal{L} =  d^{C}_{i} \:  [ (g^{v}_{\phi d})^{ij} +  (g^{a}_{\phi d})^{ij} \gamma^{5} ] \: d_{j} \: \phi^{\pm}  +  u^{C}_{k}  [ (g^{v}_{u\chi})^{k} + (g^{a}_{u\chi})^{k} \gamma^{5} ] \: \chi \: \phi^{\pm}
+%\mathcal{L} =  d^{C}_{i} \:  [ (g^{v}_{\phi d})^{ij} +  (g^{a}_{\phi d})^{ij} \gamma^{5} ] \: d_{j} \: \phi^{\pm}  +  u^{C}_{k}  [ (g^{v}_{u\chiDM})^{k} + (g^{a}_{u\chiDM})^{k} \gamma^{5} ] \: \chiDM \: \phi^{\pm}
 %%%CD: problems with the original typesetting
 %\end{eqnarray}
 
@@ -126,23 +126,23 @@ the index $S$ stands for scalar field, and the index $q$
 runs over the three quark generations, and the color indices are not shown. 
 
 %The first term leads to the production of the new particle and the last term allows its decay into a $up$-quark 
-%and a non interacting fermion (in particular to the top quark when $(g^{v/a}_{u\chi})^{k}$ 
+%and a non interacting fermion (in particular to the top quark when $(g^{v/a}_{u\chiDM})^{k}$ 
 %is sizable mainly for $k=3$).
 %This model is then described by the masses of the new particle $m_{\phi}$ and the invisible 
-%fermion $m_{\chi}$, and the coupling 
-%$(g^{v/a}_{\phi d})^{ij}$ and $(g^{v/a}_{u\chi})^{k}$.
+%fermion $m_{\chiDM}$, and the coupling 
+%$(g^{v/a}_{\phi d})^{ij}$ and $(g^{v/a}_{u\chiDM})^{k}$.
 
 In the notation of~\cite{Agram:2013wda}, 
 the couplings of the new colored fields to down-type quarks are
 embedded into the $3\times 3$ antisymmetric matrices
 $a^q_{\{S\}R}$ (scalar couplings) and $b^q_{\{S\}R}$ (pseudoscalar couplings)
-while those to the new fermion $\chi$ and one
+while those to the new fermion $\chiDM$ and one
 single up-type quarks are given by the three-component vectors
 $a^{1/2}_{\{S\}R}$ and $b^{1/2}_{\{S\}R}$
 in flavor space. 
 
 % 
-% \com{Question/comment: in this resonant model, this is not so obvious to interpret $\phi_{\pm}$ as the new particle since there is a vertex $\phi-u-\chi$.
+% \com{Question/comment: in this resonant model, this is not so obvious to interpret $\phi_{\pm}$ as the new particle since there is a vertex $\phi-u-\chiDM$.
 % It is somehow breaking the concept of having a dark sector weakly coupled to ordinary matter via a new particle.}
 In the following, we only consider the model with a new colored scalar, as the requirement of invariance
 under $SU(2)_L \times U(1)_Y$ would require the introduction of further particles in the case of a new colored vector~\cite{Boucheneb:2014wza}.
@@ -164,7 +164,7 @@ The Lagrangian describing the dynamics of the non-resonant case is:
 % \begin{equation}
 %  \label{eq:lagrangianNonResonantScalar}
 % \mathcal{L} =  u^{C}_{i} \:  [ (g^{v}_{\phi u})^{ij} +  (g^{a}_{\phi u})^{ij}  \gamma^{5} ] \: u_{j} \: \phi  
-%  +  \chi^{C}  [ g^{v}_{\phi\chi} + g^{a}_{\phi\chi}  \gamma^{5} ] \chi \: \phi
+%  +  \chiDM^{C}  [ g^{v}_{\phi\chiDM} + g^{a}_{\phi\chiDM}  \gamma^{5} ] \chiDM \: \phi
 % \end{equation}
 % where $u$ stands for any $up$-quark, the index $v$ ($a$) stands for vectorial (axial), 
 % $C$ means charge conjugate and $i,j,k$ run over the generations.
@@ -197,12 +197,12 @@ and $b^{\{1\}}_{FC}$ for the axial vector couplings.
 %\begin{equation}
 % \label{eq:lagrangianNonResonantVector}
 %  \mathcal{L}  =  \bar{u}_{i} [ (g^{v}_{Vu})^{ij} \gamma^{\mu} + (g^{a}_{Vu})^{ij} \gamma^{5} ] u_{j} \: V_{\mu}  
-%  +  \bar{\chi} [ g^{v}_{Vu} \gamma^{\mu} + g^{a}_{V\chi} \gamma^{5} ]   \chi \: V_{\mu}
+%  +  \bar{\chiDM} [ g^{v}_{Vu} \gamma^{\mu} + g^{a}_{V\chiDM} \gamma^{5} ]   \chiDM \: V_{\mu}
 %\end{equation}
 %where $u$ stands for any $up$-quark, the index $v$ ($a$) stands for vectorial (axial) and $i,j,k$ run over the generations.
 %The first term describes the interaction between the new particle and the $up$-quarks while the second term leads to the decay the new particle 
 %into invisible fermions. The new sector can be defined with the couplings $(g^{v/a}_{Vu})^{ij}$, 
-%$g^{a/v}_{V\chi}$ and the masses $m_V$ and $m_{\chi}$. 
+%$g^{a/v}_{V\chiDM}$ and the masses $m_V$ and $m_{\chiDM}$. 
 %This model can be probed by two different experimental signatures: monotop and same-sign top quark production. 
 %% 
 %% \com{Question for theorists: why it cannot mix with $\Zboson$ in case of vectorial new particle ?}
@@ -226,7 +226,7 @@ This implies the vector to be an SU(2)L singlet, hence in turn setting the vecto
 to have elements of equal values. 
 
 Furthermore, in order to be visible at the LHC in the monotop final state, 
-these models must include a strong coupling between the new particle $\phi$ and $t\chi$.
+these models must include a strong coupling between the new particle $\phi$ and $t\chiDM$.
 %In the resonant case, the new particle must also couple to light quarks in order
 %to be produced at the LHC, leading to possible constraints from
 %dijet searches. 
@@ -242,7 +242,7 @@ and light quarks ($a_{FC}$), are set to non-zero values
 \esp 
 \ee
 
-%  (on top of $V \to t\bar{u} + \bar{t}u$ and $V \to \chi\chi$). 
+%  (on top of $V \to t\bar{u} + \bar{t}u$ and $V \to \chiDM\chiDM$). 
  
 %
 %Typically, including 
@@ -254,7 +254,7 @@ and light quarks ($a_{FC}$), are set to non-zero values
 %\end{equation}
 %where $g^{R/L} \equiv 1/2 \, (g^{v} \pm g^{a})$ couples only to right-handed/left-handed components. 
 %The second term stems from invariance under $\SUtwo$ rotations, and leads to an additional 
-%decay mode $V \to b\bar{d} + \bar{b}d$ (on top of $V \to t\bar{u} + \bar{t}u$ and $V \to \chi\chi$). 
+%decay mode $V \to b\bar{d} + \bar{b}d$ (on top of $V \to t\bar{u} + \bar{t}u$ and $V \to \chiDM\chiDM$). 
 
 %Given that the new particle must be produced from a light quark in the initial state, 
 %in association with a top quark, the monotop signature can mainly probe a high 
@@ -267,7 +267,7 @@ and light quarks ($a_{FC}$), are set to non-zero values
 %CD: not sure I understand?
 % In addition, the new particle must decay into invisible particles
 % to lead to the searched monotop final state. As a consequence, the sensitivity for 
-% scenario where $\BR{V}{\chi\chi}\ll 100\%$ can be quite low. 
+% scenario where $\BR{V}{\chiDM\chiDM}\ll 100\%$ can be quite low. 
 % To cope with this second limitation, a same-sign top quark final state 
 % $gu \to tV(\to t\bar{u})$ is proposed to cover the cases where $V$ would decay
 % into visible particles. This case is more likely as the $tV$ production rate increases, 
@@ -303,7 +303,7 @@ this case is discussed in Appendix~\ref{app:MonojetLikeModels_Appendix}.
 The relevant parameters for the resonant model are:
 \begin{itemize}
 	\item The mass of the new scalar $\phi$;
-	\item The mass of the new fermion $\chi$;
+	\item The mass of the new fermion $\chiDM$;
 	\item The coupling of the new scalar to the new fermion and top quark $a$, 
 	related to the width of the scalar in the minimal width assumption;
 \end{itemize}	
@@ -311,10 +311,10 @@ The relevant parameters for the resonant model are:
 The relevant parameters for the non-resonant model are:
 \begin{itemize}
 	\item The mass of the new vector $V$;
-	%\item The mass of the new fermion $\chi$;
+	%\item The mass of the new fermion $\chiDM$;
 	\item The coupling of the new vector to the up and top quark $a$, 
 	related to the width of the scalar in the minimal width assumption;
-	\item The coupling of the new vector to the new fermion $\chi$, 
+	\item The coupling of the new vector to the new fermion $\chiDM$, 
 	related to the branching fraction of the vector into invisible and visible particle,
 	and as a consequence to the width of the vector. 
 \end{itemize}	
