--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -94,7 +94,7 @@ Sec.~\ref{subsec:MonojetLikeModels}, in particular a Dirac fermion DM particle, 
 %The benchmark chosen for these searches follows the assumptions mentioned in the previous Section: we consider 
 %a Dirac fermion DM particle, universal couplings to quarks, and minimum mediator width. 
  
-The benchmark points scanning the model parameters have been selected to ensure that the kinematic features of the parameter space are sufficiently represented. Detailed studies were performed to identify points in the \mdm, $m_{\phi,a}$, $\gdm$, $\gq$ (and $\Gamma_{\phi,a}$) parameter space that differ significantly from each other in terms of expected detector acceptance. Because missing transverse momentum is the key observable for searches, the mediator $p_{T}$ spectra is taken to represent the main kinematics of a model. Another consideration in determining the set of benchmarks is to focus on the phase space where we expect the searches to be sensitive during the 2015 LHC run. Based on a projected integrated luminosity of $30\,{\rm fb}^{-1}$ expected for 2015, we disregard model points with a cross section times branching ratio smaller than $0.1\,{\rm fb}$.
+The benchmark points scanning the model parameters have been selected to ensure that the kinematic features of the parameter space are sufficiently represented. Detailed studies were performed to identify points in the \mdm, $m_{\phi,a}$, $\gDM$, $\gq$ (and $\Gamma_{\phi,a}$) parameter space that differ significantly from each other in terms of expected detector acceptance. Because missing transverse momentum is the key observable for searches, the mediator $p_{T}$ spectra is taken to represent the main kinematics of a model. Another consideration in determining the set of benchmarks is to focus on the phase space where we expect the searches to be sensitive during the 2015 LHC run. Based on a projected integrated luminosity of $30\,{\rm fb}^{-1}$ expected for 2015, we disregard model points with a cross section times branching ratio smaller than $0.1\,{\rm fb}$.
 
 The kinematics is most dependent on the masses \mdm and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} 
 and~\ref{fig:scanPhiPseudo} show typical dependencies for scalar and pseudoscalar couplings respectively.
@@ -150,9 +150,9 @@ Another case where the width can impact the kinematics is when $m_{\phi,a}$ is s
 \end{center}
 \end{figure}
 
-Given that the kinematics are similar for all couplings $\sim O(1)$, we recommend to generate only samples with $\gdm = \gq = 1$.
+Given that the kinematics are similar for all couplings $\sim O(1)$, we recommend to generate only samples with $\gDM = \gq = 1$.
 It follows from this that these benchmark points should be a good
-approximation for non-unity couplings and for $\gdm \neq \gq$, provided
+approximation for non-unity couplings and for $\gDM \neq \gq$, provided
 that the sample is rescaled to the appropriate cross section times
 branching ratio.
 
@@ -161,7 +161,7 @@ While the simple scaling function
 \begin{equation}
    \sigma'\times BR' = [\sigma \times BR]
    \times {\gq' \over \gq}^2
-   \times {\gdm'\over \gdm}^2
+   \times {\gDM'\over \gDM}^2
    \times {\Gamma\over\Gamma'}
 \end{equation}
 is sufficient for a limited range of coupling values (see Fig.~\ref{fig:xsec_scaling} for example), we also choose to provide instead a table of cross section times branching ratio values over a large range of couplings to support interpretation of search results (see the Appendix~\ref{app:TTBar_Xsecs}). The table lists couplings from $g=0.1$ to $g=3.5$, where the upper limit is chosen to close to the perturbative limit.
@@ -195,7 +195,7 @@ leading to a total of 24 benchmark points.
 %  $500$  &                                               $500$, $1000$, $1500$  \\
 % \hline
 % \end{tabular}
-% \caption{Simplified model benchmarks for $t\bar{t}$+DM production via spin-0 mediators decaying to Dirac DM fermions taking the minimum width presciption for $g_v = \gdm = 1$.}
+% \caption{Simplified model benchmarks for $t\bar{t}$+DM production via spin-0 mediators decaying to Dirac DM fermions taking the minimum width presciption for $g_v = \gDM = 1$.}
 % \label{tab:ttdm_benchmarks}
 % \end{table}
 % 
