--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -102,109 +102,8 @@
 \linenumbers
 
 
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-%Symbols for Monojet section
-\newcommand{\bra}[1]{\langle #1|}
-\newcommand{\ket}[1]{|#1\rangle}
-\newcommand{\MET}{\slashed{E}_T}
-%\newcommand{\mMed}{\ensuremath{M_{\rm{med}}}\xspace}
-\newcommand{\mMed}{\ensuremath{M_{{med}}}\xspace}
-\newcommand{\gDM}{\ensuremath{g_{\rm{DM}}}\xspace}
-%\newcommand{\gq}{\ensuremath{g_{\rm q}}\xspace}
-\newcommand{\gq}{\ensuremath{g_{q}}\xspace}
-\newcommand{\ifb}{\rm{fb}^{-1}}
-\newcommand{\mdm}{\ensuremath{m_{\rm{DM}}}\xspace}
-\newcommand{\mmed}{\ensuremath{m_{\rm{med}}}\xspace}
-\newcommand{\gdm}{\ensuremath{g_{\rm{DM}}}\xspace}
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-%Symbols for TTBar section
-\def\invfb   {\ensuremath{\mbox{\,fb}^{-1}}\xspace}
-\newcommand{\mev}{\ensuremath{\mathrm{\,Me\kern -0.1em V}}\xspace}
-\newcommand{\mevc}{\ensuremath{{\mathrm{\,Me\kern -0.1em V\!/}c}}\xspace}
-\newcommand{\mevcc}{\ensuremath{{\mathrm{\,Me\kern -0.1em V\!/}c^2}}\xspace}
-\newcommand{\gev}{\ensuremath{\mathrm{\,Ge\kern -0.1em V}}\xspace}
-\newcommand{\gevc}{\ensuremath{{\mathrm{\,Ge\kern -0.1em V\!/}c}}\xspace}
-\newcommand{\gevcnospace}{\ensuremath{{\mathrm{\,Ge\kern -0.1em V\!/}c}}}
-\newcommand{\gevcc}{\ensuremath{{\mathrm{\,Ge\kern -0.1em V\!/}c^2}}\xspace}
-\newcommand{\bea}{\begin{eqnarray}}
-\newcommand{\eea}{\end{eqnarray}}
-
-\def\beq{\begin{equation}}
-\def\eeq{\end{equation}}
-\def\bea{\begin{eqnarray}}
-\def\eea{\end{eqnarray}}
-
-\newcommand{\gsim}{ \mathop{}_{\textstyle \sim}^{\textstyle >} }
-\newcommand{\lsim}{ \mathop{}_{\textstyle \sim}^{\textstyle <} }
-\newcommand{\ev}{{\rm eV}}
-\newcommand{\kms}{{\rm km/s}}
-\newcommand{\kev}{{\rm keV}}
-\newcommand{\Mev}{{\rm MeV}}
-
-\def\missET {\slashed{E}_T}
-\def \bm#1{\mbox{\boldmath$#1$\unboldmath}} 
-\def \myeq#1{(\ref{#1})}
-
-%TODO: make sure all symbols are consistent...
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-%Symbols for monotop
-\newcommand{\DMParticle}{\ensuremath{\chi}}
-\newcommand{\be}{\begin{equation}}
-\newcommand{\ee}{\end{equation}}
-\newcommand\bpm{\begin{pmatrix}}
-	\newcommand\epm{\end{pmatrix}}
-\def\bsp#1\esp{\begin{split}#1\end{split}}
-\renewcommand{\d}{{\rm d}} 
-\newcommand{\etc}{{\it etc.}}
-\newcommand{\ie}{{\it i.e.}}
-\newcommand{\eg}{{\it e.g.}}
-\newcommand{\lag}{{\cal L}} 
-\newcommand{\gmu}{\gamma^\mu}
-\newcommand{\feynrules}{{\sc FeynRules}}
-\newcommand{\madgraph}{{\sc MadGraph}}
-\newcommand{\madevent}{{\sc MadEvent}}
-\newcommand{\madanalysis}{{\sc MadAnalysis}}
-\newcommand{\fewz}{{\sc Fewz}}
-\newcommand{\hathor}{{\sc Hathor}}
-\newcommand{\pythia}{{\sc Pythia}}
-\newcommand{\tauola}{{\sc Tauola}}
-\newcommand{\delphes}{{\sc Delphes}}
-\newcommand{\fastjet}{{\sc FastJet}}
-\newcommand{\SUtwoUone}{\ensuremath{\mathrm{SU}(2)_{L} \times \mathrm{U}(1)_{Y}}\xspace}
-\newcommand{\SUtwo}{\ensuremath{\mathrm{SU}(2)_{L}}\xspace}
-\newcommand{\Lagr}{\ensuremath{\mathcal{L}}\xspace}
-\newcommand{\fmet}{\ensuremath{f_{\mathrm{met}}}\xspace}
-\newcommand{\met}{MET\xspace}
-\newcommand{\ares}{\ensuremath{a_{\mathrm{res}}}\xspace}
-\newcommand{\anonres}{\ensuremath{a_{\mathrm{non-res}}}\xspace}
-\newcommand{\Xnew}{\ensuremath{X_{\mathrm{new}}}\xspace}
-\newcommand{\BR}[2]{\ensuremath{\mathrm{BR}({#1} \to {#2})}\xspace}
-\newcommand{\ssll}{\ensuremath{\ell^{+}\ell^{+}}\xspace}
-\newcommand{\ttbarV}{\ensuremath{\ttbar V}\xspace}
-\def\mfmet{\ensuremath{m(f_{\mathrm{met}})}}
-\def\mvmet{\ensuremath{m(v_{\mathrm{met}})}}
-\def\vmet{\ensuremath{v_{\mathrm{met}}}}
-\def\fmet{\ensuremath{f_{\mathrm{met}}}}
-
-%%% Stuff for EFT
-\def\Qtr{Q_{\rm tr}}
-\def\pT{p_{\rm T}}
-\def\mx{m_{\rm DM}}
-\def\gx{g_{\rm DM}}
-
- \def\be   {\begin{equation}}   \def\ee   {\end{equation}}
- \def\ba   {\begin{array}}      \def\ea   {\end{array}}
- \def\bea  {\begin{eqnarray}}   \def\eea  {\end{eqnarray}}
- \def\bean {\begin{eqnarray*}}  \def\eean {\end{eqnarray*}}
- \def\nn{\nonumber}
-\def\MCut{\ensuremath{M_\text{cut}}\xspace}
-
+% consistent symbols throughout document
+\input symbols.tex
 
 \begin{document}
 
@@ -223,7 +122,7 @@
 \input{tex/Introduction.tex}
 %\fi
 
-\chapter{Recommended models for all MET+X analyses}
+\chapter{Recommended models for all \MET+X analyses}
 This chapter of the report is dedicated to simplified
 models that produced, primarily, monojet signatures.
 Details of the implementation of these models in
@@ -280,7 +179,7 @@ Appendix \ref{app:MonojetLikeModels_Appendix}.
 %\fi 
 
 %\ifNotMonojetTTBarOnly
-\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+MET searches}{Appendix: Table of cross sections for  ttbar+MET searches}}
+\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+\MET searches}{Appendix: Table of cross sections for  ttbar+\MET searches}}
 \label{app:TTBar_Xsecs}
 \input{tex/TTBar_Xsecs_Appendix.tex}
 %\fi 
